make graph bigger

--- a/example.html
+++ b/example.html
@@ -17,7 +17,7 @@
         <div class="row-fluid">
             <div class="col-md-12">
                 <!-- <div class="row"> -->
-                    <highchart id="chart1" config="chartConfig"></highchart>
+                    <highchart id="chart1" config="chartConfig" style="height: 600px"></highchart>
                 <!-- </div> -->
 <!--                 <div class="row&#45;fluid"> -->
 <!--                     <label for="prettyJSON"><input id="prettyJSON" type="checkbox" ng&#45;model="prettyJSON"> Pretty JSON</label> -->
