--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <h1>Temporada de Pases 2015</h1>
 
 <div ng-app="myapp">
-  <div ng-controller="myctrl">
+  <div ng-controller="stateController">
     <div class="row-fluid">
       <div class="col-md-12">
         <highchart id="chart1" config="chartConfig" style="height: 600px"></highchart>
