--- a/index.html
+++ b/index.html
@@ -3,28 +3,22 @@
 <head>
     <meta charset="utf-8">
     <link href="http://netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/css/bootstrap-combined.min.css" rel="stylesheet">
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.0.8/angular.min.js"></script>
-    <script src="http://code.highcharts.com/stock/highstock.src.js"></script>
-    <script src="highcharts-ng.js"></script>
-    <script src="app.js"></script>
 </head>
 <body>
 <h1>Temporada de Pases 2015</h1>
 
 <div ng-app="myapp">
-  <div ng-controller="stateController">
-    <div class="row-fluid">
-      <div class="col-md-12">
-        <highchart id="chart1" config="chartConfig" style="height: 600px"></highchart>
-      </div>
-    </div>
-    <div class="row">
-      <span ng-repeat="field in fields">
-        <a href="" ng-click="addSeries(field)">{{field}}</a> -
-      </span>
-    </div>
-  </div>
+  <div ng-view></div>
 </div>
+
+<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.3/angular.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.3/angular-resource.js"></script>
+<script src='https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.3/angular-route.js'></script>
+
+<!--     <script src='https://ajax.googleapis.com/ajax/libs/angularjs/1.0.8/angular&#45;route.js'></script> -->
+<script src="http://code.highcharts.com/stock/highstock.src.js"></script>
+<script src="highcharts-ng.js"></script>
+<script src="app.js"></script>
 </body>
 </html>
