--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
 <h1>Temporada de Pases 2015</h1>
 
-<div ng-app="myapp">
+<div class="container" ng-app="myapp">
   <div ng-view></div>
 </div>
 
