Remove unnecessary information. WIP

--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="utf-8">
     <link href="http://netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/css/bootstrap-combined.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="styles/app.css">
+    
 </head>
 <body>
 <h1>Temporada de Pases 2015</h1>
