--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
 
 <!--     <script src='https://ajax.googleapis.com/ajax/libs/angularjs/1.0.8/angular&#45;route.js'></script> -->
 <script src="http://code.highcharts.com/stock/highstock.src.js"></script>
-<script src="highcharts-ng.js"></script>
-<script src="app.js"></script>
+<script src="js/highcharts-ng.js"></script>
+<script src="js/highcharts-style.js"></script>
+<script src="js/app.js"></script>
 </body>
 </html>
