--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="utf-8">
     <link href="http://netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/css/bootstrap-combined.min.css" rel="stylesheet">
+    <link href='http://fonts.googleapis.com/css?family=Lato|Yanone+Kaffeesatz:400,700&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="styles/app.css">
-    
 </head>
 <body>
-<h1>Temporada de Pases 2015</h1>
+<h1>Corralito Mutual 2015</h1>
 
 <div class="container" ng-app="myapp">
   <div ng-view></div>
