--- a/index.html
+++ b/index.html
@@ -8,12 +8,20 @@
     <link rel="stylesheet" href="styles/app.css">
 </head>
 <body>
-<h1>Corralito Mutual 2015</h1>
+<h1>Comparador de mutualistas - 2015</h1>
 
 <div class="container" ng-app="myapp">
   <div ng-view></div>
 </div>
 
+<footer class="footer">
+  <div class="container">
+    <p>Este sitio es una visualización complementaria de los datos publicados por el MSP en <a href="http://atuservicio.uy" target="_blank">A tu Servicio</a>.
+    Los datos obtenidos pueden no ser completos, y no debería ser utilizado de forma exclusiva para tomar decisiones sobre el Prestador de Servicio.</p>
+    <p>Para mayor información sobre los filtros: <a href="http://atuservicio.uy" target="_blank">A tu Servicio</a>.</p>
+    <p>
+  </div>
+</footer>
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.3/angular.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.3/angular-resource.js"></script>
