--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
 
 <footer class="footer">
   <div class="container">
-    <p>Este sitio es una visualización complementaria de los datos publicados por el MSP en <a href="http://atuservicio.uy" target="_blank">A tu Servicio</a>.
+    <p>Este sitio es una visualización complementaria de los datos publicados por el Ministerio de Salud Pública del Uruguay en <a href="http://atuservicio.uy" target="_blank">A tu Servicio</a>.
     Los datos obtenidos pueden no ser completos, y no debería ser utilizado de forma exclusiva para tomar decisiones sobre el Prestador de Servicio.</p>
-    <p>Para mayor información sobre los filtros: <a href="http://atuservicio.uy" target="_blank">A tu Servicio</a>.</p>
+    <p>Para mayor información sobre los filtros ver: <a href="http://atuservicio.uy" target="_blank">A tu Servicio</a>.</p>
     <p>
   </div>
 </footer>
