--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <!-- <link href="http://netdna.bootstrapcdn.com/twitter&#45;bootstrap/2.3.2/css/bootstrap&#45;combined.min.css" rel="stylesheet"> -->
+    <title>Comparar Mutualistas 2015</title>
     <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
     <link href='http://fonts.googleapis.com/css?family=Lato|Yanone+Kaffeesatz:400,700&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="styles/app.css">
 </head>
 <body>
-<h1>Comparador de mutualistas - 2015</h1>
+<h1>Comparar Mutualistas - 2015</h1>
 
 <div class="container" ng-app="myapp">
   <div ng-view></div>
