--- a/index.html
+++ b/index.html
@@ -16,12 +16,13 @@
 
 <footer class="footer">
   <div class="container">
-    <p>Este sitio es una visualización complementaria de los datos publicados por el Ministerio de Salud Pública del Uruguay en <a href="http://atuservicio.uy" target="_blank">A tu Servicio</a>.
-    Los datos obtenidos pueden no ser completos, y no debería ser utilizado de forma exclusiva para tomar decisiones sobre el Prestador de Servicio.</p>
-    <p>Para mayor información sobre los filtros ver: <a href="http://atuservicio.uy" target="_blank">A tu Servicio</a>.</p>
-    <p>
+    <p>Los datos utilizados en esta aplicación se obtuvieron del Catálogo Nacional de Datos Abiertos de AGESIC</p>
+    <p>Por no existir estándares que actúen como línea de referencia para evaluar a las distintas instituciones en base a los indicadores publicados,
+    la utilidad del análisis radica en la comparación entre instituciones de acuerdo a las características a las que cada usuario asigne mayor valor.</p>
+    <p>Para mayor información, ver: <a href="http://atuservicio.uy" target="_blank">A tu Servicio</a>.</p>
   </div>
 </footer>
+
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.3/angular.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.3/angular-resource.js"></script>
