Update title name

--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <link rel="stylesheet" href="styles/app.css">
 </head>
 <body>
-<h1>Comparar Mutualistas - 2015</h1>
+<h1>Comparar Proveedores de Servicios</h1>
+<h1 class="subtitle">Corralito Mutual - Febrero 2015</h1>
 
 <div class="container" ng-app="myapp">
   <div ng-view></div>
