--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
 <script src="http://code.highcharts.com/stock/highstock.src.js"></script>
 <script src="js/highcharts-ng.js"></script>
 <script src="js/highcharts-style.js"></script>
+<script src="js/ga.js"></script>
 <script src="js/app.js"></script>
 </body>
 </html>
