Change GA script position

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="styles/app.css">
 </head>
 <body>
+<!-- Google Analytics recomment GA script to be just below the body tag -->
+<script src="js/ga.js"></script>
 
 <div class="container" ng-app="myapp">
   <h1>Proveedores de Servicios - Datos 2015 MSP</h1>
@@ -33,7 +35,6 @@
 <script src="http://code.highcharts.com/stock/highstock.src.js"></script>
 <script src="js/highcharts-ng.js"></script>
 <script src="js/highcharts-style.js"></script>
-<script src="js/ga.js"></script>
 <script src="js/app.js"></script>
 </body>
 </html>
