--- a/index.html
+++ b/index.html
@@ -32,7 +32,8 @@
 <script src='https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.3/angular-route.js'></script>
 
 <!--     <script src='https://ajax.googleapis.com/ajax/libs/angularjs/1.0.8/angular&#45;route.js'></script> -->
-<script src="http://code.highcharts.com/stock/highstock.src.js"></script>
+<!-- http://code.highcharts.com/highcharts.js -->
+<script src="http://code.highcharts.com/highcharts.js"></script>
 <script src="js/highcharts-ng.js"></script>
 <script src="js/highcharts-style.js"></script>
 <script src="js/app.js"></script>
