--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
 <script src="http://code.highcharts.com/highcharts.js"></script>
 <script src="js/highcharts-ng.js"></script>
 <script src="js/highcharts-style.js"></script>
+<script src="js/uservoice.js"></script>
 <script src="js/app.js"></script>
 </body>
 </html>
